--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "license": "UNLICENSED",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "tsx ./src",
     "build": "yarn typecheck && tsc",
@@ -11,15 +12,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@ghsry.ai/prisma": "*",
     "@ghsry.ai/shared": "*",
     "@trpc/server": "^10.45.1",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.6.0",
     "dotenv": "^16.4.1",
+    "drizzle-orm": "^0.29.3",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "lodash": "^4.17.21",
+    "mysql2": "^3.9.1",
+    "nanoid": "^5.0.5",
     "queue": "^7.0.0",
     "uuid": "^9.0.1"
   },
@@ -31,6 +34,7 @@
     "@types/lodash": "^4.14.202",
     "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.10",
+    "drizzle-kit": "^0.20.14",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   }
