--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -8,7 +8,7 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
-    "module": "CommonJS",
+    "module": "ES2022",
     "skipLibCheck": true
   },
   "ts-node": {
