--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fusionauth/react-sdk": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
